# AoCS

FPGA/test/: test.qpf  test.qsf  test.qws
FPGA/test/db/: test.db_info
FPGA/test2/: counter.qpf  counter.qsf  counter.qws  counter.v  counter.v.bak  counter_nativelink_simulation.rpt
FPGA/test2/db/: .cmp.kpt  counter.(0).cnf.hdb  counter.asm.qmsg  counter.asm.rdb  counter.cmp.bpm  counter.cmp.cdb  counter.cmp.hdb  counter.cmp.rdb  counter.db_info  counter.eda.qmsg  counter.fit.qmsg  counter.hier_info  counter.hif  counter.map.bpm  counter.map.cdb  counter.map.hdb  counter.map.kpt  counter.map.qmsg  counter.map.rdb  counter.map_bb.cdb  counter.map_bb.hdb  counter.pre_map.hdb  counter.rtlv.hdb  counter.rtlv_sg.cdb  counter.sta.qmsg  counter.sta.rdb  counter.sta_cmp.7_slow_1100mv_100c.tdb  counter.tiscmp.fast_1100mv_100c.ddb  counter.tiscmp.fast_1100mv_n40c.ddb  counter.tiscmp.slow_1100mv_100c.ddb  counter.tmw_info  (+2 more)
common_tasks/: CMakeLists.txt  README.md  compile_all.sh  main.cpp
common_tasks/src/: atomic_double.h  lim_semafor.h  map_mt.h  my_async.h  my_unique_lock.h  recursive_spinlock.h  thread_pool.h
cpp_try/: CMakeLists.txt  archive.cpp  f_inp.txt  main.cpp
lab_1_speed_testing/: CMakeLists.txt  README.md  main.cpp  run.sh
lab_1_speed_testing/include/: PerformanceTester.h
lab_1_speed_testing/scripts/: build.sh  test_double_cast_performance.py  test_file_gen.py
lab_1_speed_testing/src/: PerformanceTester.cpp
lab_1_speed_testing/tmp/: doubles_1MB.txt
lab_2_parallel_integration/: CMakeLists.txt  README.md  execution.conf  execution.ini  main.cpp
(+46 files in other folders)
